--- a/style.css
+++ b/style.css
@@ -17,3 +17,17 @@
 h1{
     font-family: "Dancing Script", cursive;
   }
+  .carousel img{
+    height: 80vh;
+    /* object-fit: cover; */
+    /* object-position: top; */
+  }
+  /* @media only screen and (max-width:500px){
+    .carousel img{
+      width: 100%;
+      height: 500px;
+        object-fit: cover;
+        object-position: center;
+       
+      }
+  } */
