--- a/style.css
+++ b/style.css
@@ -8,6 +8,24 @@
     object-fit: cover;
     object-position: top;
 }
+.bg-img-1{
+background-image: url("img/Shirish-104.jpg");
+}
+.bg-img-2{
+  background-image: url("img/candid-2.jpg");
+}
+.bg-img-3{
+  background-image: url("img/img-30.jpg");
+  /* background-position: top right 10px; */
+}
+.carousel-image{
+  /* width: 100%; */
+  height: 70vh;
+  /* display: block; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+}
 #image{
     /* width: 400px; */
     height: 500px;
