--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
 }
 .bg-img-1{
 background-image: url("img/Shirish-104.jpg");
+
 }
 .bg-img-2{
-  background-image: url("img/candid-2.jpg");
+  background-image: url("b5img/banner1.jpg");
+  /* background-position: top left 50px; */
 }
 .bg-img-3{
   background-image: url("img/img-30.jpg");
@@ -22,10 +24,28 @@ background-image: url("img/Shirish-104.jpg");
   /* width: 100%; */
   height: 70vh;
   /* display: block; */
-  background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
+  background-repeat: no-repeat;
 }
+.icons{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.icons img{
+ cursor: pointer;
+  width: 50px;
+}
+.contact-image{
+  width: 100%;
+   
+  justify-content: center;
+  align-items: center;
+  border: none;
+}
+
+
 #image{
     /* width: 400px; */
     height: 500px;
@@ -37,15 +57,5 @@ h1{
   }
   .carousel img{
     height: 80vh;
-    /* object-fit: cover; */
-    /* object-position: top; */
+
   }
-  /* @media only screen and (max-width:500px){
-    .carousel img{
-      width: 100%;
-      height: 500px;
-        object-fit: cover;
-        object-position: center;
-       
-      }
-  } */
