--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
+/* carousel section  */
+.carousel-item{
+  margin-top: 7%;
+} 
 .carousel-item img{
     height: 80vh;
     object-fit: cover;
@@ -14,20 +26,17 @@ background-image: url("img/Shirish-104.jpg");
 }
 .bg-img-2{
   background-image: url("b5img/banner1.jpg");
-  /* background-position: top left 50px; */
 }
 .bg-img-3{
   background-image: url("img/img-30.jpg");
-  /* background-position: top right 10px; */
 }
 .carousel-image{
-  /* width: 100%; */
   height: 70vh;
-  /* display: block; */
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
 }
+/* footer section  */
 .icons{
   display: flex;
   justify-content: center;
@@ -39,19 +48,19 @@ background-image: url("img/Shirish-104.jpg");
 }
 .contact-image{
   width: 100%;
-   
+  
   justify-content: center;
   align-items: center;
   border: none;
 }
 
-
+/* about section image  */
 #image{
-    /* width: 400px; */
     height: 500px;
     margin-right: 30px;
     margin-top: 20px;
-}
+} 
+/* use font  */   
 h1{
     font-family: "Dancing Script", cursive;
   }
@@ -59,3 +68,4 @@ h1{
     height: 80vh;
 
   }
+
